[package]
name = "async-send-fd"
version = "1.1.0"
edition = "2021"
authors = ["Alexander Smoktal [https://github.com/alexander-smoktal]"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexander-smoktal/async-send-fd"
description = """
A wrapper for async UnixStream's to send file descriptors
"""
categories = ["asynchronous", "network-programming"]

[features]
default = []
tokio = ["dep:tokio"]
smol = ["dep:smol"]

[dependencies]
passfd = "0.1"
tokio = { version = "1", features = ["net", "io-util"], optional = true }
smol = { version = "2", optional = true }

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1", features = ["net", "rt", "macros", "io-util"] }
async-send-fd = { path = ".", features = ["tokio", "smol"] }

[package.metadata.docs.rs]
all-features = true
